Fixed up front matter

--- a/alantree.tex
+++ b/alantree.tex
@@ -57,6 +57,8 @@ for its hospitality.
 %   and Anastasios~Sidiropoulos 
 }
 
+\pagenumbering{roman}
+
 \begin{document}
 \maketitle
 
@@ -67,8 +69,11 @@ at random, an edge of $G$ with exactly one endpoint in $T$ and adding
 this edge to $T$.
 \end{abstract}
 
+\newpage
 \tableofcontents
 \newpage
+
+\pagenumbering{arabic}
 
 \section{Introduction}
 
