--- a/alantree.bib
+++ b/alantree.bib
@@ -69,3 +69,66 @@
   pages     = {241--244},
   year      = {1988},
 }
+
+@Inbook{McDiarmid1998,
+author="McDiarmid, Colin",
+editor="Habib, Michel
+and McDiarmid, Colin
+and Ramirez-Alfonsin, Jorge
+and Reed, Bruce",
+title="Concentration",
+bookTitle="Probabilistic Methods for Algorithmic Discrete Mathematics",
+year="1998",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="195--248",
+isbn="978-3-662-12788-9",
+doi="10.1007/978-3-662-12788-9_6",
+url="http://dx.doi.org/10.1007/978-3-662-12788-9_6",
+note="available at \url{http://www.stats.ox.ac.uk/people/academic_staff/colin_mcdiarmid/?a=4139}"
+}
+
+@unpublished{janson,
+author="Janson, S.",
+title="Tail bounds for sums of geometric and exponential variables",
+note="available in \url{http://www2.math.uu.se/~svante/papers/sjN14.pdf}"
+}
+
+@book{boucheron2013concentration,
+  title={Concentration inequalities: A nonasymptotic theory of independence},
+  author={Boucheron, St{\'e}phane and Lugosi, G{\'a}bor and Massart, Pascal},
+  year={2013},
+  publisher={Oxford university press}
+}
+
+@incollection {richardson_survey,
+    AUTHOR = {Durrett, R.},
+     TITLE = {Stochastic growth models: recent results and open problems},
+ BOOKTITLE = {Mathematical approaches to problems in resource management and
+              epidemiology ({I}thaca, {NY}, 1987)},
+    SERIES = {Lecture Notes in Biomath.},
+    VOLUME = {81},
+     PAGES = {308--312},
+ PUBLISHER = {Springer, Berlin},
+      YEAR = {1989},
+   MRCLASS = {92A15 (60K35)},
+  MRNUMBER = {1041337 (90m:92052)},
+       DOI = {10.1007/978-3-642-46693-9_21},
+}
+
+@article{fpp_survey,
+  author    = {A. Auffinger and M. Damron and J. Hanson},
+  title     = {50 years of first passage percolation},
+  journal   = {arXiv},
+  volume = {1511.03262~[math.PR]},
+  year      = {2016},
+}
+
+@TechReport{wolle.koster.ea:note,
+  author    = {T Wolle and A. M. . C. A. Koster adn H. L. Bodlaender},
+  title     = {A Note on Contraction Degeneracy},
+  institution = {University of Utrecht},
+  year      = {2004},
+  number    = {UU-CS-2004-042} 
+}
+
