--- a/pat.sty
+++ b/pat.sty
@@ -35,7 +35,7 @@
 \newcommand{\thmlabel}[1]{\label{thm:#1}}
 \newcommand{\thmref}[1]{Theorem~\ref{thm:#1}}
 
-\newtheorem{lem}{Lemma}{\bfseries}{\itshape}
+\newtheorem{lem}[thm]{Lemma}{\bfseries}{\itshape}
 \newcommand{\lemlabel}[1]{\label{lem:#1}}
 \newcommand{\lemref}[1]{Lemma~\ref{lem:#1}}
 
@@ -43,7 +43,7 @@
 \newcommand{\conjlabel}[1]{\label{lem:#1}}
 \newcommand{\conjref}[1]{Conjecture~\ref{lem:#1}}
 
-\newtheorem{cor}{Corollary}{\bfseries}{\itshape}
+\newtheorem{cor}[thm]{Corollary}{\bfseries}{\itshape}
 \newcommand{\corlabel}[1]{\label{cor:#1}}
 \newcommand{\corref}[1]{Corollary~\ref{cor:#1}}
 
