--- a/alantree.tex
+++ b/alantree.tex
@@ -1886,11 +1886,11 @@ Using \lemref{sqrtab} (concentration for the sum of $Y_{a,b}$ random variables) 
 \[
 1-\Pr\{\mathcal A\}
 \leq
-2 \Pr \{X_1 >  CL / 3\sqrt \delta\}
+2 \Pr\left\{X_1 >  CL / 3\sqrt \delta\right\}
 +
-\Pr\{ \sum_{i=1}^{L-1}Z_i >  CL / 3\sqrt \delta\}
+\Pr\left\{ \sum_{i=1}^{L-1}Z_i >  CL / 3\sqrt \delta\right\}
 \leq
-2\exp(-CL / 3\sqrt \delta) +
+2\exp\left(-CL / 3\sqrt \delta\right) +
 \exp(-(L-2)/9)
 =o_L(1)
 \]
