--- a/alantree.tex
+++ b/alantree.tex
@@ -51,6 +51,7 @@
 \DeclareMathOperator{\exponential}{exponential}
 \DeclareMathOperator{\binomial}{binomial}
 \DeclareMathOperator{\erlang}{Erlang}
+\DeclareMathOperator{\diam}{diam}
 
 \newcommand{\abas}[1]{\textcolor{orange}{\big[Abbas: #1\big]}}
 \newcommand{\tcal}{\mathcal{T}}
@@ -1077,12 +1078,17 @@ first-passage percolation time.
   with $p=o_n(1)$, $c=2$, $K=14.05$, and $a=d$.
 \end{proof}
 
-A natural generalization of the $d$-cube graph is the \emph{$(d,k)$-grid},
-which has vertex set $\{0,\ldots,k\}^d$ and has an edge between two
-vertices if and only if the (Euclidean or $\ell_1$) distance between
-them is 1.  Note that the case $k=2$ is the $d$-cube.
+A natural generalization of the $d$-cube is the \emph{$(d,k)$-grid}, which
+has vertex set $\{0,\ldots,k\}^d$ and has an edge between two vertices
+if and only if the (Euclidean or $\ell_1$) distance between them is 1.
+The $(d,k)$-grid has diameter $D=dk$ and maximum degree $\Delta=2d$.
 
-We prove a result about the first-passage-percolation cover time of grids,
+Note that in the case $k=1$, the $(d,1)$-grid is the $d$-cube, for which
+\thmref{alantree-upper-bound-hypercube} gives the optimal bound and this
+bound can be extended to $k\in O(1)$.   \thmref{alantree-upper-bound}
+gives an upper bound $O(d^2k)$ on $h(\tcal(G,s))$, which is optimal
+for $d\in O(1)$.  The rest of this section is devoted to proving the
+following result on the first-passage-percolation cover time of grids,
 which gives a bound on the height of $\tcal(G,s)$.
 
 \begin{thm}\thmlabel{bestgrid-universal}
@@ -1090,379 +1096,182 @@ Let $G$ be the $(d,k)$-grid and $n=(k+1)^d$.  Then, for any vertex $s\in
 V(G)$, we have that $\tau(G,s)= O(k)$ with probability $1-o_n(1)$.
 \end{thm}
 
-Since the maximum degree of the $(d,k)$-grid is $2d$ and its diameter is $dk$, applying \lemref{meta-theorem} gives the following corollary.
+Applying \lemref{meta-theorem} gives the following corollary of \thmref{bestgrid-universal}.
 
 \begin{cor}\corlabel{bestgrid}
 Let $G$ be the $(d,k)$-grid and $n=(k+1)^d$.  For any vertex $s\in V(G)$
 we have that with probability $1-o_n(1)$, $ h(\tcal(G,s)) = \Theta(dk)$
 \end{cor}
 
-The proof of \thmref{bestgrid-universal} is broken into two parts. The first is a lemma that handles a limited range of $d$ and $k$.
+To prove \thmref{bestgrid-universal} we will make use of the following lemma
+about the weighted diameter of the $d$-cube:
 
-\begin{lem}\lemlabel{bestgrid}
-Let $G$ be the $(d,k)$-grid.  There exists a constant $C$ such that for
-any vertex $s\in V(G)$ we have
-\[
-\Pr \{ \tau(G,s) \geq (4+C)k + Cd^{2/3}\ln(k+1) \} 
-\leq
-3 \exp (-d\ln(k+1)) =3/n \:;
-\]
-in particular, if $k/\ln(k+1) \geq d^{2/3}$,
-then with probability $1-O(1/n)$ we have
-$\tau(G,s)=O(k)$.
+\begin{lem}\lemlabel{cubediameter}
+   Let $Q$ be the $d$-cube with independent $\exponential(1)$
+   edge weights.  There exists constants $c$ and $x_0$ such that,
+   for all $x\ge x_0$, $Q$ has weighted diameter at most $x$
+   with probability at least $1-e^{-cxd}$, i.e., 
+   \[ 
+       \Pr\{\max\{\tau(G,s): s\in V(Q) \} > x\} \le e^{-cxd}
+       \enspace .
+   \]
 \end{lem}
-
-%\abas{Note that this theorem has been updated. We no longer claims that $\tau(G,s)=O(k)$ for all $k$ and $d$. I think the previous proof had a gap, in going from expectation to with-high-probability.}
-
-%\begin{todo}
-%Look a bit more carefully at the gap here.
-%\end{todo}
-%
-%We conjecture that, for all values of $k$ and $d$ we have $\tau(G,s)=O(k)$
-%with probability $1-o_n(1)$, which implies that for all $d$ and $k$,
-%with probability $1-o_n(1)$ we have $h(\tcal(G,s))=\Theta(dk)$.
-%
-
-%\thmref{dk-grid-foxtrot}, in \appref{dk-grid-foxtrot}, shows that
-%the first-passage percolation time in the $(d,k)$-grid is $O(k)$ with
-%probability $1-o_n(1)$.  Applying \lemref{meta-theorem} with 
-%the first-passage percolation bound in \thmref{dk-grid-foxtrot} yields
-%the following:
-%
-%\begin{cor}\corlabel{alantree-upper-bound-dk-grid}
-%  Let $n=(k+1)^d$, let $G$ be the $(d,k)$-grid and let $T$ be the tree obtained
-%  by running Process~FP starting at any vertex $s\in V(G)$.  Then,
-%  with probability at least $1-o_n(1)$, $h(T)\in O(dk)$.
-%\end{cor}
-
-%\section{First-Passage Percolation-Time Bounds}
-
-%Next, 
-%
-%
-%In this appendix, we prove (in some cases reprove) some results on
-%first-passage percolation time on the $(d,k)$-grid that hold for
-%all values of $d$ and $k$.  Specifically, we show that the first-passage
-%percolation time is $O(k)$ with high probability.
-
-%
-%\begin{todo}
-%Abbas says: I'm not sure about the following two paragraphs... they remain from an older version, but perhaps can be updated/removed!?
-%
-%\noindent
-%Pat says: I included this in the old version because it seems like an obvious approach that probably also works. The kind of thing a referee would ask about. It's also the reason I originally put these results in an appendix.
-%\end{todo}
-%
-%Before doing this, though, we note that this result can already be
-%obtained from the $O(1)$ bound on first-passage percolation time on the
-%$d$-cube \cite{fill.pemantle:percolation, martinsson:unoriented}.  To see
-%why, observe that the crux of the problem involves studying the weight
-%of the lightest path from $s=(0,\ldots,0)$ to $t=(k,\ldots,k)$. One can
-%find a path from $s$ to $t$ that passes through each $v_i=(i,\ldots,i)$
-%for $i\in\{0,\ldots,k\}$, in order.  The first-passage percolation
-%result for the $d$-cube shows that one can get from $v_i$ to $v_{i+1}$
-%with a path whose expected weight is $O(1)$ and that never leaves the
-%$d$-cube induced by $\{i,i+1\}^d$.  Thus there is a path from $s$ to $t$
-%whose weight is the sum of $k$ i.i.d.\ random variables $Q_1,\ldots,Q_k$
-%each having expectation $O(1)$. The only detail that remains is to
-%show that the distribution of $Q_i$ is well-behaved enough to obtain a
-%sufficiently strong concentration result on this sum.
-%
-%Nevertheless, we provide an alternate proof here.  One reason for
-%this is to make our results self-contained.  Another, however, is
-%that our arguments differ significantly from previous results on
-%thd $d$-cube \cite{fill.pemantle:percolation, martinsson:unoriented,
-%bollobas.kohayakawa:on} and may be of independent algorithmic interest.
-%In particular, our proofs use greedy algorithms to find light paths.
-%Our proof for the hypercube, for example, shows that one can find a path
-%of expected weight $O(1)$ between any pair of vertices in $O(d^4)$ time.
-%Exact shortest path algorithms, like Dijkstra's algorithm, require at
-%least $\Omega(2^d)$ time.  Similarly, on the $(d,k)$-grid, our proof
-%gives an algorithm that finds a short path in $O(kd^4)$ time, while a
-%shortest path agorithm would require $\Omega(d(k+1)^d)$ time.
-
-For the rest of this section, $G$ is a fixed $(d,k)$-grid.
-\lemref{bestgrid} follows from the following lemma by choosing $\Delta =
-4k+ Cd^{2/3}\ln(k+1)$.
-
-\begin{lem}
-  \lemlabel{hypercube}
-  There exists an absolute positive constant $C$ such that for any two
-  vertices $s$  and $v$ and any $\Delta\geq 4k$ we have
-  \begin{equation}
-  \Pr \{ \tau(G,s,v) > Ck + \Delta\} 
-        \leq 3 \exp\left(-{\Delta d^{1/3}}/C\right)
-  \label{hypercube:formula}
-  \end{equation}
-\end{lem}
-
-%Applying~\thmref{thm:hypercube} with  gives the following corollary.
-%\begin{cor}\corlabel{bestgrid}
-%There exists a constant $C$ such that for any vertex $s$ we have
-%\[
-%\Pr \{ \tau(G,s) \geq (3+C)k + 2Cd^{2/3}\ln(k+1) \} 
-%\leq
-%3 \exp (-d\ln(k+1)) =3/n \:;
-%\]
-%in particular, if $k/\ln(k+1) \geq d^{2/3}$,
-%then with probability $1-O(1/n)$ we have
-%$\tau(G,s)=O(k)$.
-%\end{cor}
-%In the rest of this section we prove~\thmref{thm:hypercube}.
 
 \begin{proof}
-We identify the vertices of the graph with points in $\mathbb{Z}^d$, and without loss of generality, we may assume that $s$ is the origin.
-For a grid vertex $u=(u_1,\ldots,u_d)$,
-its $\ell_1$ norm $\|u\|_1$, or $\ell_1$ distance to the origin, is defined as $\sum_{i=1}^d u_i$,
-and its Hamming norm $\|u\|_H$, or Hamming distance from the origin, is its number of non-zero entries.
-
-We give an algorithm to find a path from $v$ to the origin.
-This is an iterative algorithm, starting from $v$,
-in each step gets closer (in $\ell_1$ distance) to the origin.
-%and at the end we analyze the weight of the generate path.
-Suppose the algorithm has find a path from $v$ to $u$ so far, and then wants to find the next part of the path.
-Suppose $h=\|u\|_H$ and $\ell = \|u\|_{1}$.
-The algorithm does one of the following, depending on the value of $h$:
-\begin{enumerate}
-  \item If $h > d/2$, then the algorithm chooses the lightest 
-    edge that brings it to a vertex closer to the origin. 
-    Let $X_{\ell}$ denotes the weight of this edge. Note that $X_{\ell}$ is an $\exponential(h)$ random variable and is stochastically dominated by an $\exponential(d/2)$ random variable.
-
-  \item Otherwise, we have $h\leq d/2$.
-  Define $L_i \coloneqq \{x\in V(G): \|x\|_1=i\}$.
-%  Define $L_i \coloneqq \{x\in V(G): \|x\|_1=i\}$. and let
-%    $\ell=\|su\|_1$ (note the use of $\ell_1$ distance, and not Hamming
-%    distance here).  
-    The algorithm chooses the lightest path $uxyz$ among
-    all paths with $x\in L_{\ell+1}$,  $y\in L_{\ell}\setminus\{u\}$,
-    and $z\in L_{\ell-1}$.
-    Note that $z$ is one step closer to the origin (in $\ell_1$ distance).
-    Let $Z_{\ell}$ denote the weight of the chosen path $uxyz$.
-    Then observe that $Z_{\ell}$ is a $Y_{a,b,c}$ random variable for some $a\geq d-h\geq d/2$, $b\geq \max\{h-1,1\}$ and $c\geq \max\{h-1,1\}$.
-    Also note that we have $h \geq \ell/k$,
-    so $Z_{\ell}$ is stochastically dominated by
-    a $Y_{d/2,\max\{\ell/2k,1\},\max\{\ell/2k,1\}}$ random variable.
- \end{enumerate}
-The weight of the path generated by $L$ steps of the preceding algorithm 
-is stochastically dominated by
-\[
-\mathcal S \coloneqq 
-\sum_{\ell=1}^{L} X_{\ell} +
-\sum_{\ell=1}^{L} Z_{\ell} \:,
-\]
-where $X_{\ell}$ is an exponential($d/2$) random variable,
-and $Z_{\ell}$ is a $Y_{d/2,\max\{\ell/2k,1\},\max\{\ell/2k,1\}}$
-random variable.
-Moreover, since $Z_{\ell}$ only depends on edges 
-between $L_{\ell-1}$, $L_{\ell}$ and $L_{\ell+1}$,
-each of the families
-$\{X_{\ell}\}$,
-$\{Z_{2i-1}\}$,
-and 
-$\{Z_{2i}\}$
-is mutually independent.
-
-We first bound the expected value of $\mathcal S$, and then use Bernstein's inequality to prove with high probability it does not exceed its expected value by much.
-By~\lemref{yabcmoments}, for some absolute constant $C$  we have
-\begin{align*}
-\E \mathcal S
-& \leq 2L/d + C \sum_{\ell=1}^{L} 
-\left(1/d + 
-\sqrt{k/d\ell}
-+ \sqrt[3]{k^2/d\ell^2}\right) \\
-& \leq
-(C+2)L/d
-+
-C\sqrt{k/d}\int_{0}^{L}x^{-1/2}dx
-+
-C\sqrt[3]{k^2/d}\int_0^{L}x^{-2/3}dx\\
-&=
-(C+2)L/d
-+
-2C\sqrt{kL/d}
-+3C\sqrt[3]{Lk^2/d}
-\leq
-(6C+2)k\:,
-\end{align*}
-where in the last line we used $L\leq kd$.
-
-For any integer $p>1$, we have $p\Gamma(p/2)/2\leq p!$ and $p\Gamma(p/3)/3\leq p!$, so
-\lemref{yabcmoments} gives that for some absolute constant $C$  we have
-\begin{align*}
-\E Z_{\ell}^p & \leq
- p (d/C)^{-p}\Gamma(p)
-+ p(d\max\{\ell/k,1\}/C)^{-p/2}\Gamma(p/2)/2
-+ p(d\max\{\ell/k,1\}^2/C)^{-p/3}\Gamma(p/3)/3\\
-&\leq
- p! (C/d)^{p}
-+ p!(C/d\max\{\ell/k,1\})^{p/2}
-+ p!(C/d\max\{\ell/k,1\}^2)^{p/3}
-\end{align*}
-Hence, we have
-\begin{align*}
-\sum_{\ell=1}^{L} \E Z_{\ell}^p / p!
-& \leq
-L (C/d)^{p}
-+
-\sum_{\ell=1}^{k}
-\left( (C/d)^{p/2}
-+ (C/d)^{p/3} \right)
-+
-\sum_{\ell=k+1}^{L}
-\left( (kC/d\ell)^{p/2}
-+ (k^2C/d\ell^2)^{p/3} \right)\\
-&
-\leq L (C/d)^{p}
-+
-k (C/d)^{p/2}
-+ k(C/d)^{p/3} 
-+
-(kC/d)^{p/2}
-\sum_{\ell=k+1}^{L}
-\ell^{-p/2}
-+
- (k^2C/d)^{p/3}
-\sum_{\ell=k+1}^{L}
-\ell^{-2p/3}
-%&\left(
-%p (C/d)^p \Gamma(p)
-%+
-%p (kC/d\ell)^{p/2} \Gamma(p/2)\right)
-%+
-%\sum_{\ell=k+1}^{L}
-%p(k^2C/d\ell^2)^{p/3}\Gamma(p/3)
-%+
-%\sum_{\ell=1}^{k} p(C/d)^{p/3}\Gamma(p/3)
-%\\
-%& =
-%L p! (C/d)^p
-%+
-%p (kC/d)^{p/2} \Gamma(p/2)
-%\sum_{\ell=1}^{L}\ell^{-p/2}
-%+ p(k^2C/d)^{p/3}\Gamma(p/3)
-%\sum_{\ell=k+1}^{L}\ell^{-2p/3} 
-%+
-%k p(C/d)^{p/3}\Gamma(p/3)
-%\\
-%&\leq
-%L p! (C/d)^p
-%+
-%2(\ln L) p! (kC/d)^{p/2} 
-%+ 2 k p!(C/d)^{p/3} + 2 p! k (C/d)^{p/3} \leq  v p!  c^{p-2}/2
-\end{align*}
-Note that 
-\[k^{p/2}\sum_{\ell=k+1}^{L}\ell^{-p/2} \leq 
-k^{p/2}\int_{\ell=k}^{L}\ell^{-p/2} 
-\leq \begin{cases}
- k \ln (L/k) \leq 2 k \ln d & \mathrm{if\ } p=2 \\
- 2k \leq 2 k \ln d &  \mathrm{if\ }  p>2
-\end{cases}
-\]
- and 
-$\sum_{\ell=k+1}^{L}\ell^{-2p/3} \leq 
-\int_{k}^{\infty} x^{-2p/3} dx \leq
-k^{1-2p/3}$, so
-\begin{align*}
-\sum_{\ell=1}^{L} \E Z_{\ell}^p / p!
-&
-\leq L (C/d)^{p}
-+
-k (C/d)^{p/2}
-+ k(C/d)^{p/3} 
-+
-2k(C/d)^{p/2} \ln d
-+
- k(C/d)^{p/3} \leq v c^{p-2}/2\:,
-\end{align*}
-for $v = C' k d^{-2/3}/2$ and
-$c = C' d^{-1/3}/2$,
-for a suitably large constant $C'$.
-Since $\{Z_{2i-1}\}$ are independent, using Bernstein's inequality we have, for any $t>1$,
-\begin{align*}
-\Pr \left\{ \sum_{i=1}^{\ell/2} (Z_{2i-1} - \E Z_{2i-1}) 
-\geq tk
-\right\}&
-\leq \exp\left(-\frac{t^2k^2}{C'kd^{-2/3} + C'tkd^{-1/3}}\right)
-\leq
-\exp\left(-\frac{t^2k^2}{2C'tkd^{-1/3}}\right)
-\end{align*}
-similarly,
-\[
-\Pr \left\{ \sum_{i=1}^{\ell/2} (Z_{2i} - \E Z_{2i}) 
-\geq t k
-\right\}\leq \exp\left(-\frac{t^2k^2}{ 2C'tkd^{-1/3}}\right)
-\:.
-\]
-
-For the variables $X_{\ell}$, using~\eqref{tail-bound} we have
-%\[
-%\E X_1^p = \int_{0}^{\infty}\exp(-dy^{1/p}/2)\mathrm{d}y
-%=p\Gamma(p)(2/d)^p\leq vp!c^{p-2}/2
-%\]
-%for $v=2L(2/d)^2\leq 8 k/d$ and $c=2/d$,
-%so by Bernstein's inequality\abas{replace with better known bounds for exponentials?},
-\[
-\Pr \left\{ \sum_{i=1}^{\ell} (X_{i} - \E X_{i}) 
-\geq tk
-\right\}\leq
-\exp(L/2-dtk/2)\leq
-\exp(kd(1-t)/2)\:.
-\]
-Finally, we have
-\begin{align*}
-&\Pr\{\mathcal S > (6C+2)k+3tk \}
- \leq
-\Pr\{\mathcal S > \E S + 3tk\} \\
-& \leq
-\Pr \left\{ \sum_{i=1}^{\ell/2} (Z_{2i-1} - \E Z_{2i-1}) 
-\geq tk
-\right\}
-+
-\Pr \left\{ \sum_{i=1}^{\ell/2} (Z_{2i} - \E Z_{2i}) 
-\geq tk
-\right\}
-+
-\Pr \left\{ \sum_{i=1}^{\ell} (X_{i} - \E X_{i}) 
-\geq tk
-\right\}\\
-& \leq
-2 \exp\left(-\frac{t^2k^2}{2C'tkd^{-1/3}}\right)+
-\exp(kd(1-t)/2)
-=
-2 \exp\left(-\frac{tkd^{1/3}}{2C'}\right)+
-\exp(kd(1-t)/2)
-\:,
-\end{align*}
-and choosing $t = \Delta/3k$ gives (\ref{hypercube:formula}).
+   I hope this is true....
+%   We assume that $d$ is greater than some sufficienty large constant,
+%   $d_0$.  Otherwise the result follows trivially from the union bound:
+%   With probability at least $1-d2^{d-1} e^{-x/d}$, every edge of the
+%   $d$-cube has weight at most $x/d$.  For $d \le d_0$, this satisifies
+%   the statement of the lemma with $x_0=3d_0\ln d_0$ and $c=1/(3d_0^2)$.
+%
+%   Fix some vertex $s$ and, for each $i\in\{0,1,\ldots,d\}$, let
+%   $L_i$ denote the subset of vertices whose distance to $s$ is $i$.
+%   Balister \etal\ \cite[Proof of Lemma~4]{balister.bollobas.ea:first}
+%   show that there is a constant $c>0$ such that, if we sample each edge
+%   of $Q$ independently with probability $p=a/d\ge 6/d$ then, with probability
+%   at least $1-e^{-cad^2}$, there is a path of length $d-4$ consisting
+%   entirely of sampled edges and having one endpoint in $L_2$ and one
+%   endpoint in $L_{d-2}$.
+%
+%   In our setting, this means that, if we only consider edges of weight
+%   at most $\ln(d/(d-x)) = O(1/d)$, then, with probability at least
+%   $1-e^{-d^2/800}$, there is a path of weight at most $d\ln(d/(d-6))$
+%   joining a vertex $u$ in $L_2$ to a vertex $w$ in $L_{d-2}$.
+%
+%   Now, there are $d$ paths of length $2$ joining $s$ to $u$ and with
+%   probability at least $1-2e^{-x d/6}$ at least one of these paths
+%   has weight no more than $x/3$.  Similarly, with probability at least
+%   $1-2e^{-xd/6}$ there is a path of length 2 of and weight at most $x/3$
+%   joining $w$ to the unique vertex $\bar{s}$ in $L_d$.
+%
+%   Therefore, with probability at least
+%   \[
+%      1-4e^{-xd/6}-e^{-d^2/800}
+%   \]
+%   there is a path of weight at most
+%   \[
+%          2x/3 + d\ln(d/(d-6))  \le x
+%   \]
+%   provided that $x \ge 3d\ln(d/(d-6))$.
+%   
 \end{proof}
 
 We can now finish the proof of \thmref{bestgrid-universal}.
 
 \begin{proof}[Proof of \thmref{bestgrid-universal}]
-By (the second part of) \lemref{bestgrid}, we need only consider the
-case where $k/\ln(k+1) < d^{2/3}$.
+The idea of this proof is that, for any vertex $v$, there is a path
+from $s$ to $v$ that visits at most $k$ $d$-cubes. Therefore, there is
+a path from $s$ to $v$ whose length is at most the sum of diameters
+of these cubes.  We upper-bound this sum using \lemref{cubediameter}
+and Chernoff bounding.
 
-Consider some vertex $u=(u_1,\ldots,u_d)$ with $u_i\in\{0,\ldots,k-1\}$
-for each $i\in\{1,\ldots,d\}$.  Associate with this vertex the subgraph
+For each vertex $u=(u_1,\ldots,u_d)$ with $u_i\in\{0,\ldots,k-1\}$
+for each $i\in\{1,\ldots,d\}$, define the subgraph
 $Q_u=G[V_u]$ of $G$ induced by the vertex set
 \[
-    V_u = \{(u_1+x_1,\ldots,u_d+x_d) :\text{$x\in\{0,1\}$ for each $i\in\{1,\ldots,d\}$}\} \enspace .
+    V_u = \{(u_1+x_1,\ldots,u_d+x_d) :\text{$x_i\in\{0,1\}$ for each $i\in\{1,\ldots,d\}$}\} \enspace .
 \]
-Now, $Q_u$ is a $(1,d)$-grid, i.e, a hypercube.  An unpublished
-result of Bollob\'as \etal \cite{X} shows that with probability
-at least $1-e^{-cd^2}$, $Q_u$ has weighted diameter $O(1)$, i.e.,
-$\tau(Q_u,a,b)=O(1)$ for every pair of vertices $a,b\in V(Q_u)$.  By the
-union bound over all $k^d$ choices of $u$ \emph{every} $Q_u$ has weighted
-diameter $O(1)$ with probability at least $1-(ke^{-cd})^d=1-o_n(1)$
-for $k=o(e^{cd})$, which is certainly true for sufficiently large $n$
-and $k/\ln(k+1) < d^{2/3}$.
 
-Now, for any vertex $v\in G$, there is a sequence $v_1,v_2,\ldots,v_r$
-of vertices in $G$ with $r\le k$ such that $s\in Q_{v_1}$, $v\in Q_{v_r}$
-and, for each $i\in\{1,\ldots,r-1\}$, $Q_{v_{i}}$ and $Q_{v_{i+1}}$ have
-at least one vertex in common.  Therefore, with probability $1-o_n(1)$,
- there is a path from $s$ to every vertex $v\in V(G)$ of weight at most
- $O(r)\subseteq O(k)$.
+Each $Q_u$ is a $(d,1)$-grid, i.e, a $d$-cube.  For any vertex $v\in
+G$, there is a sequence $v_1,v_2,\ldots,v_{k'}$ of vertices in $G$
+with $k'\le k$ such that
+\begin{enumerate}
+  \item $s\in Q_{v_1}$ and $v\in Q_{v_{k'}}$; 
+  \item for each $i\in\{1,\ldots,k'-1\}$, $Q_{v_{i}}$ and $Q_{v_{i+1}}$ have at least one
+vertex in common.
+  \item for each $i\in\{1,\ldots,k\}$ and each $j\in\{1,\ldots,k\}\setminus\{i-1,i,i+1\}$, $Q_{v_i}$ and $Q_{v_j}$ have no edges (or vertices) in common.
+\end{enumerate}
+The sequence $v_1,\ldots,v_{k'}$ can be found with a greedy algorithm:
+Define $v_0'=s$.  Now, if $v_{i-1}'$ and $v$ differ in $r$ coordinates,
+then there is some vertex $v_i$ such that $Q_{v_i}$ contains $v_{i-1}'$
+as well as some vertex $v_i'$ whose distance to $v$ is $r$ less than
+the distance from $v_{i-1}'$ to $v$.
+
+Observe that $\tau(G,s,v)$ does not exceed the sum of the weighted diameters of
+$Q_{v_1},\ldots,Q_{v_k'}$:
+\[
+   \tau(G,s,v) \le \sum_{i=1}^{k'} \diam(Q_{v_i}) \enspace .
+\]
+Point 3, above ensures that the random variables
+$\diam(Q_{v_1}),\ldots,\diam(Q_{v_{k'}})$ can be partitioned into two
+sets of size $\lfloor k'/2\rfloor$ and $\lceil k/2\rceil$
+where the variables within a set are independent.
+
+Let $X_1,\ldots,X_k$ and $Y_1,\ldots,Y_k$ be random variables each
+distributed like the weighted diameter of the $d$-cube and such that
+$X_1,\ldots,X_k$ are independent and $Y_1,\ldots,Y_k$ are independent.
+It follows from the preceding discussion that $\tau(G,s,v)$ is
+stochastically dominated by $\sum_{i=1}^k (X_i+Y_i)$.  We now use
+Chernoff's bounding technique to bound the two sums $X=\sum_{i=1}^k X_i$
+and $Y=\sum_{i=1}^k Y_i$.
+
+For any $t>0$,
+\[
+    \E\left[e^{tX}\right] 
+      = \E\left[e^{t\left(\sum_{i=1}^k X_i\right)}\right] 
+      = \E\left[\prod_{i=1}^k e^{tX_i}\right]
+      = \prod_{i=1}^k\E\left[e^{tX_i}\right]
+      = \E\left[e^{tX_1}\right]^k \enspace .
+\]
+Now, taking $x_1=\max\{1,x_0\}$, where $x_0$ appears in \lemref{cubediameter}, 
+we have
+\begin{align*}
+   \E\left[e^{tX_1}\right]
+     & = \int_0^\infty \Pr\left\{e^{tX_1} > x\right\}\,\mathrm{d}x \\
+     & = \int_0^\infty \Pr\left\{X_1 > \ln x/t\right\}\,\mathrm{d}x \\
+     & \le x_1 + \int_{x_1}^\infty \Pr\{X_1 > \ln x/t\}\,\mathrm{d}x \\
+     & \le x_1 + \int_{x_1}^\infty e^{-c\ln x d/t}\,\mathrm{d}x & \text{(by \lemref{cubediameter})} \\
+     & =  x_1 + \int_{x_1}^\infty x^{-cd/t}\,\mathrm{d}x \\
+     & \le  x_1 + \int_{1}^\infty x^{-cd/t}\,\mathrm{d}x \\
+     & = x_1 + \frac{t}{cd(1-t/cd)} \\
+     & = x_1 + 1 & \text{(for $t=cd/2$)} \enspace .
+\end{align*}
+Now we finish by applying Markov's Inequality.  For any $a>0$
+\begin{align*}
+   \Pr\{X > ak \} 
+    &= \Pr\{ e^{tX} > e^{atk}\} \\
+    &\le \frac{\E[e^{tX}]}{e^{atk}} \\
+    &\le \frac{(x_1+1)^k}{e^{atk}} \\
+    &= e^{k\ln(x_1+1) - atk} \\
+    &= e^{k\ln(x_1+1) - acdk/2} &\text{(recalling that $t=cd/2$)} \enspace .
+\end{align*}
+We now have
+\[
+   \Pr\{ \tau(G,s,v) > ak\} \le \Pr\{X > ak\} + \Pr\{Y>ak\}
+          \le 2 e^{k\ln(x_1+1) - acdk/2} \enspace .
+\]
+Applying the union bound over all $(k+1)^d$ vertices of the $(d,k)$-cube
+completes the proof:
+\begin{align*}
+   \Pr\{\tau(G,s) > ak\} 
+     & \le \sum_{v\in V(G)} \Pr\{ \tau(G,s,v) > ak\}  \\
+     & \le 2(k+1)^d e^{k\ln(x_1+1) - acdk/2} \\
+     & = e^{d\ln(2(k+1))+k\ln(x_1+1) - acdk/2} \\
+     & = o_n(1) \enspace ,
+\end{align*}
+for
+\[
+   a > \frac{2(d\ln(2(k+1)+k\ln(x_1+1))}{cdk} \enspace .
+\qedhere 
+\]
+
+
+
+%An unpublished
+%result of Bollob\'as \etal \cite{X} shows that with probability
+%at least $1-e^{-cd^2}$, $Q_u$ has weighted diameter $O(1)$, i.e.,
+%$\tau(Q_u,a,b)=O(1)$ for every pair of vertices $a,b\in V(Q_u)$.  By the
+%union bound over all $k^d$ choices of $u$ \emph{every} $Q_u$ has weighted
+%diameter $O(1)$ with probability at least $1-(ke^{-cd})^d=1-o_n(1)$
+%for $k=o(e^{cd})$, which is certainly true for sufficiently large $n$
+%and $k/\ln(k+1) < d^{2/3}$.
+%Now, for any vertex $v\in G$, there is a sequence $v_1,v_2,\ldots,v_r$
+%of vertices in $G$ with $r\le k$ such that $s\in Q_{v_1}$, $v\in Q_{v_r}$
+%and, for each $i\in\{1,\ldots,r-1\}$, $Q_{v_{i}}$ and $Q_{v_{i+1}}$ have
+%at least one vertex in common.  Therefore, with probability $1-o_n(1)$,
+% there is a path from $s$ to every vertex $v\in V(G)$ of weight at most
+% $O(r)\subseteq O(k)$.
 \end{proof}
 
 %We now solve the grid graph problem.
